# trmrs

./: .tool-versions  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
cli/: Cargo.toml
cli/src/: main.rs
device/: Cargo.toml  README.md
device/src/: main.rs  png.rs  wifi.rs
src/: draw.rs  main.rs  png.rs  wifi.rs
trmrs/: Cargo.toml
trmrs/src/: example.rs.bak  main.rs  png.rs
trmrs_core/: Cargo.toml
trmrs_core/src/: dimensions.rs  lib.rs  png.rs
