[package]
name = "trmrs"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "trmrs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
epd-waveshare = "0.6.0"
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
embedded-graphics = "0.8.1"
anyhow = "1.0.98"
rand = "0.8.5"
png = "0.17.16"

[build-dependencies]
embuild = "0.33"
