[workspace]
resolver = "3"
members = ["device","trmrs_core"]
cargo-features = ["per-package-target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

